# runic-dev-ui

./: .gitignore  Cargo.toml  DESIGN_BRIEF.md  README.md  Trunk.toml  index.html  package.json  pnpm-lock.yaml  style.css  ui_config.toml
src/: api.rs  app.rs  events.rs  main.rs  model.rs  util.rs  views.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: chat.rs  composer.rs  inspector.rs  mod.rs  sidebar.rs
src/components/ui/: button.rs  mod.rs  select.rs  sheet.rs
style/: tailwind.css
