[package]
name = "runic-dev-ui"
version = "0.2.0"
edition = "2024"
authors = ["machache <machache@eittel.com>"]
license = "MIT"
publish = false

# A Leptos CSR (client-side, WASM) dev console for the runic HTTP server.
# Built with `trunk serve`; talks to `runic serve` over HTTP+SSE.
[[bin]]
name = "runic-dev-ui"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-net = "0.6"
gloo-file = { version = "0.3", features = ["futures"] }
wasm-streams = "0.5"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "AbortController",
    "AbortSignal",
    "TextDecoder",
    "PointerEvent",
    "MouseEvent",
    "DomRect",
    "Element",
    "HtmlInputElement",
    "File",
    "FileList",
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaStreamTrack",
    "MediaStreamConstraints",
    "MediaRecorder",
    "BlobEvent",
    "Blob",
    "BaseAudioContext",
    "AudioContext",
    "AudioBuffer",
] }
